# KnightOnline

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  All.sln  All.slnLaunch  All.slnx  CMakeLists.txt  Client.sln  Client.slnx  ClientTools.sln  ClientTools.slnx  Directory.Build.props  Doxyfile  GTA.runsettings  README.md  Server.sln  Server.slnLaunch  Server.slnx  Tests.sln  Tests.slnx  ThirdParty.sln  ThirdParty.slnx  Tools.sln  Tools.slnx  default.env  docker-compose.yaml  gta.runsettings
Client/KscViewer/: CMakeLists.txt  KscViewer.cpp  KscViewer.vcxproj  KscViewerDoc.cpp  KscViewerView.cpp
Client/Option/: CMakeLists.txt  Option.vcxproj  OptionDlg.cpp
Client/tests/: CMakeLists.txt  Convert2DTo3DCoordinate_test.cpp  Convert3DTo2DCoordinate_test.cpp  IntersectTriangle_test.cpp  MathHelpers.h  Matrix44_test.cpp  Quaternion_test.cpp  Vector2_test.cpp  Vector3_test.cpp  client-tests.vcxproj  client-tests.vcxproj.filters
FileIO/: CMakeLists.txt  File.h  FileIO.vcxproj  FileIO.vcxproj.filters  FileReader.cpp  FileReader.h  FileWriter.cpp
FileIO/tests/: FileIO-tests.vcxproj  FileWriterSetup_test.cpp  FileWriter_test.cpp
N3ME/: CMakeLists.txt  DTexGroup.cpp  DTexGroupMng.cpp  DlgBase.cpp  DlgDelGroup.cpp  DlgMapView.cpp  DlgRiverProperty.cpp  DlgSaveDivision.cpp  DlgSceneGraph.cpp  DlgSetSound.h  EventCell.cpp  EventCell.h  EventMgr.cpp  LightObjMgr.cpp  LightObjMgr.h  LyTerrain.cpp  LyTerrain.h  MapMng.cpp  MapMng.h  N3ME.vcxproj  NPCPath.cpp  NPCPath.h  NPCPathMgr.cpp  NPCPathMgr.h  PondMesh.cpp  PondMng.cpp  PondMng.h  PosDummy.cpp  RegenUser.cpp  RiverMesh.cpp  RiverMesh.h  RiverMng.cpp  RiverMng.h  RotDummy.cpp  ScaleDummy.cpp  SoundMgr.cpp  SoundMgr.h  SowSeedMng.cpp  TransDummy.cpp  VtxPosDummy.cpp  (+5 more)
N3TexViewer/: CMakeLists.txt  MainFrm.cpp  N3TexViewer.vcxproj  N3TexViewerDoc.cpp  StdAfx.h
N3Viewer/: CMakeLists.txt  N3Viewer.vcxproj  N3ViewerView.cpp  ViewProperty.cpp
Server/AIServer/: AIServer.cpp  AIServer.rc  AIServer.vcxproj  AIServer.vcxproj.filters  AIServerApp.cpp  AIServerApp.h  AIServerLogger.h  AISocketManager.cpp  AISocketManager.h  AiServer.cpp  AiServerInstance.cpp  AiServerInstance.h  CMakeLists.txt  Define.h  Extern.h  GameSocket.cpp  GameSocket.h  MagicProcess.cpp  MagicProcess.h  MakeItemTableSet.cpp  Map.cpp  Map.h  Npc.cpp  Npc.h  NpcItem.cpp  NpcItem.h  NpcMagicProcess.cpp  NpcMagicProcess.h  NpcThread.cpp  NpcThread.h  Party.cpp  Party.h  PartyUser.cpp  PartyUser.h  PathFind.cpp  PathFind.h  Region.cpp  Region.h  RoomEvent.cpp  RoomEvent.h  (+14 more)
Server/Ebenezer/: AISocket.cpp  AISocket.h  CMakeLists.txt  Define.h  EVENT.cpp  EVENT.h  EVENT_DATA.h  EXEC.cpp  EXEC.h  Ebenezer.cpp  Ebenezer.rc  Ebenezer.vcxproj  Ebenezer.vcxproj.filters  EbenezerApp.cpp  EbenezerApp.h  EbenezerDlg.cpp  EbenezerDlg.h  EbenezerInstance.cpp  EbenezerInstance.h  EbenezerLogger.cpp  EbenezerLogger.h  EbenezerReadQueueThread.cpp  EbenezerReadQueueThread.h  EbenezerResourceFormatter.cpp  EbenezerResourceFormatter.h  EbenezerSocketManager.cpp  EbenezerSocketManager.h  GameDefine.h  GameEvent.cpp  GameEvent.h  Knights.cpp  Knights.h  KnightsManager.cpp  KnightsManager.h  LOGIC_ELSE.cpp  LOGIC_ELSE.h  MagicProcess.cpp  MagicProcess.h  Map.cpp  Map.h  (+16 more)
Server/ItemManager/: CMakeLists.txt  Define.h  ItemManager.cpp  ItemManager.rc  ItemManager.vcxproj  ItemManager.vcxproj.filters  ItemManagerApp.cpp  ItemManagerApp.h  ItemManagerDlg.cpp  ItemManagerDlg.h  ItemManagerInstance.cpp  ItemManagerInstance.h  ItemManagerLogger.h  ItemManagerReadQueueThread.cpp  ItemManagerReadQueueThread.h  StdAfx.h
Server/VersionManager/: CMakeLists.txt  DBProcess.cpp  DBProcess.h  Define.h  User.cpp  User.h  VersionManager.cpp  VersionManager.vcxproj  VersionManager.vcxproj.filters  VersionManagerApp.cpp  VersionManagerApp.h  VersionManagerDlg.cpp  VersionManagerDlg.h  VersionManagerInstance.cpp  VersionManagerInstance.h  pch.h  resource.h  stdafx.h
Server/shared-server/: AppThread.cpp  AppThread.h  CMakeLists.txt  GeometricStructs.h  Matrix44.inl  My_3DStruct.cpp  My_3DStruct.h  N3ShapeMgr.cpp  N3ShapeMgr.h  ReadQueueThread.cpp  ReadQueueThread.h  STLMap.h  SharedMemoryBlock.cpp  SharedMemoryBlock.h  SharedMemoryQueue.cpp  SharedMemoryQueue.h  SocketManager.cpp  SocketManager.h  TcpClientSocket.cpp  TcpServerSocket.h  TcpSocket.cpp  Vector3.inl  _USER_DATA.h  ftxui_sink_mt.cpp  ftxui_sink_mt.h  logger.cpp  logger.h  pch.h  shared-server.vcxproj  shared-server.vcxproj.filters  stdafx.h  utilities.cpp  utilities.h
shared/: ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  CircularBuffer.h  DateTime.cpp  DateTime.h  DebugUtils.cpp  Ini.cpp  Ini.h  StringConversion.cpp  StringUtils.cpp  Thread.cpp  Thread.h  TimerThread.cpp  TimerThread.h  globals.cpp  globals.h  lzf.h  packets.h  pch.h  shared.vcxproj  shared.vcxproj.filters  stdafx.h
src/Client/KscViewer/: CMakeLists.txt  KscViewer.cpp  KscViewer.h  KscViewer.vcxproj  KscViewerDoc.cpp  KscViewerDoc.h  KscViewerView.cpp  KscViewerView.h  MainFrm.cpp  MainFrm.h  N3JpegFile.cpp  N3JpegFile.h  StdAfx.cpp  StdAfx.h
src/Client/Launcher/: APISocket.cpp  APISocket.h  BB_CircularBuffer.cpp  BB_CircularBuffer.h  BackgroundUtil.cpp  (+14 more)
src/MathUtils/: CMakeLists.txt  GeometricStructs.h  MathUtils.cpp  MathUtils.h  MathUtils.vcxproj  Matrix44.h  Matrix44.inl  Quaternion.h  Quaternion.inl  Vector2.h  Vector2.inl  Vector3.h  Vector3.inl  Vector4.h  Vector4.inl
src/db-library/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  DatasourceConfig.h  Exceptions.h  Model.h  ModelRecordSet.h  PoolConnection.cpp  PoolConnection.h  RecordSetLoader.h  RecordSetLoader_STLMap.h  RecordSetLoader_Vector.h  SqlBuilder.h  StoredProc.h  db-library.vcxproj  db-library.vcxproj.filters  fwd.h  utils.cpp  utils.h
tests/MathUtils/: CMakeLists.txt  CollisionBox_test.cpp  Convert2DTo3DCoordinate_test.cpp  Convert3DTo2DCoordinate_test.cpp  IntersectTriangle_test.cpp  MathHelpers.h  MathUtils-tests.vcxproj  MathUtils.Tests.vcxproj  Matrix44_test.cpp  Quaternion_test.cpp  Vector2_test.cpp  Vector3_test.cpp  Vector4_test.cpp  Yaw2D_test.cpp
(+1383 files in other folders)
